<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/tvShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/series_name_label"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSeriesMainImage" />

    <ImageView
        android:id="@+id/ivSeriesMainImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvShowGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show_genres_label"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShowName" />

    <LinearLayout
        android:id="@+id/llDatesContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/tvShowGenres">

        <TextView
            android:id="@+id/tvShowPremiered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Premiered"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvShowEnded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Ended"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvShowSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDatesContainer" />


    <LinearLayout
        android:id="@+id/llSeasonEpisodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/tvShowSummary">

        <TextView
            android:id="@+id/tvNumberSeasons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/number_of_seasons_label"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvNumberEpisode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/number_of_episodes_label"
            android:textAlignment="center" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/llSeasonEpisodes"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
